--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <script src="jspm_packages/system.js"></script>
   <script src="config.js"></script>
   <script>
-    System.import('index');
+    System.import('components/Main');
   </script>
 </head>
 <body>
