Show flash movie

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name='author' content='Hoya Kim'/>
   <meta name="referrer" content="no-referrer"/>
 
-  <title>Inkbunny mobile client</title>
+  <title>Inkbunny React client</title>
   <script src="jspm_packages/system.js"></script>
   <script src="config.js"></script>
   <script>
