Correct index.html

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <meta name='description', content='Inkbunny React client'/>
-  <meta name='keywords', content='inkbunny'/>
+  <meta name='description' content='Inkbunny React client'/>
+  <meta name='keywords' content='inkbunny'/>
   <meta name='author' content='Hoya Kim'/>
   <meta name="referrer" content="no-referrer"/>
 
