Project bundler correction.

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
   <meta name="referrer" content="no-referrer"/>
 
   <title>Inkbunny React client</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
   <script src="jspm_packages/system.js"></script>
   <script src="config.js"></script>
+  <script src="vendor.min.js"></script>
   <script>
     System.import('components/Main');
   </script>
